terraform/modules/networking/routes/main.tf
# Route tables
resource "aws_route_table" "public" {
  vpc_id = var.vpc_id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = var.igw_id
  }
}

resource "aws_route_table" "private" {
  vpc_id = var.vpc_id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = var.nat_gateway_id
  }
}

# Associations with subnets
resource "aws_route_table_association" "public" {
  count = length(var.public_subnets_ids)

  subnet_id      = var.public_subnets_ids[count.index]
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private" {
  count = length(var.private_subnets_ids)

  subnet_id      = var.private_subnets_ids[count.index]
  route_table_id = aws_route_table.private.id
}
